auth user endpoint delete
