# Backend/api/openapi-expanded.json
@@ -7,6 +7,9 @@
   "paths": {
     "/user/": {
       "post": {
+        "tags": [
+          "user"
+        ],
         "summary": "Create New User",
         "operationId": "create_new_user_user__post",
         "requestBody": {
@@ -146,8 +149,16 @@
         }
       },
       "delete": {
+        "tags": [
+          "user"
+        ],
         "summary": "Delete User By Id",
         "operationId": "delete_user_by_id_user__delete",
+        "security": [
+          {
+            "OAuth2PasswordBearer": []
+          }
+        ],
         "parameters": [
           {
             "name": "id",
@@ -233,6 +244,9 @@
         }
       },
       "patch": {
+        "tags": [
+          "user"
+        ],
         "summary": "Update User By Id",
         "operationId": "update_user_by_id_user__patch",
         "parameters": [
@@ -366,10 +380,217 @@
           }
         }
       }
+    },
+    "/login/": {
+      "post": {
+        "tags": [
+          "login"
+        ],
+        "summary": "Login For Acess Token",
+        "operationId": "login_for_acess_token_login__post",
+        "requestBody": {
+          "content": {
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "properties": {
+                  "grant_type": {
+                    "anyOf": [
+                      {
+                        "type": "string",
+                        "pattern": "^password$"
+                      },
+                      {
+                        "type": "null"
+                      }
+                    ],
+                    "title": "Grant Type"
+                  },
+                  "username": {
+                    "type": "string",
+                    "title": "Username"
+                  },
+                  "password": {
+                    "type": "string",
+                    "title": "Password"
+                  },
+                  "scope": {
+                    "type": "string",
+                    "title": "Scope",
+                    "default": ""
+                  },
+                  "client_id": {
+                    "anyOf": [
+                      {
+                        "type": "string"
+                      },
+                      {
+                        "type": "null"
+                      }
+                    ],
+                    "title": "Client Id"
+                  },
+                  "client_secret": {
+                    "anyOf": [
+                      {
+                        "type": "string"
+                      },
+                      {
+                        "type": "null"
+                      }
+                    ],
+                    "title": "Client Secret"
+                  }
+                },
+                "type": "object",
+                "required": [
+                  "username",
+                  "password"
+                ],
+                "title": "Body_login_for_acess_token_login__post"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "access_token": {
+                      "type": "string",
+                      "title": "Access Token"
+                    },
+                    "token_type": {
+                      "type": "string",
+                      "title": "Token Type"
+                    }
+                  },
+                  "type": "object",
+                  "required": [
+                    "access_token",
+                    "token_type"
+                  ],
+                  "title": "Token"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "detail": {
+                      "items": {
+                        "properties": {
+                          "loc": {
+                            "items": {
+                              "anyOf": [
+                                {
+                                  "type": "string"
+                                },
+                                {
+                                  "type": "integer"
+                                }
+                              ]
+                            },
+                            "type": "array",
+                            "title": "Location"
+                          },
+                          "msg": {
+                            "type": "string",
+                            "title": "Message"
+                          },
+                          "type": {
+                            "type": "string",
+                            "title": "Error Type"
+                          }
+                        },
+                        "type": "object",
+                        "required": [
+                          "loc",
+                          "msg",
+                          "type"
+                        ],
+                        "title": "ValidationError"
+                      },
+                      "type": "array",
+                      "title": "Detail"
+                    }
+                  },
+                  "type": "object",
+                  "title": "HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
     "schemas": {
+      "Body_login_for_acess_token_login__post": {
+        "properties": {
+          "grant_type": {
+            "anyOf": [
+              {
+                "type": "string",
+                "pattern": "^password$"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Grant Type"
+          },
+          "username": {
+            "type": "string",
+            "title": "Username"
+          },
+          "password": {
+            "type": "string",
+            "title": "Password"
+          },
+          "scope": {
+            "type": "string",
+            "title": "Scope",
+            "default": ""
+          },
+          "client_id": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Client Id"
+          },
+          "client_secret": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Client Secret"
+          }
+        },
+        "type": "object",
+        "required": [
+          "username",
+          "password"
+        ],
+        "title": "Body_login_for_acess_token_login__post"
+      },
       "HTTPValidationError": {
         "properties": {
           "detail": {
@@ -447,6 +668,24 @@
           "is_active"
         ],
         "title": "ShowUser"
+      },
+      "Token": {
+        "properties": {
+          "access_token": {
+            "type": "string",
+            "title": "Access Token"
+          },
+          "token_type": {
+            "type": "string",
+            "title": "Token Type"
+          }
+        },
+        "type": "object",
+        "required": [
+          "access_token",
+          "token_type"
+        ],
+        "title": "Token"
       },
       "UpdateUserRequest": {
         "properties": {
@@ -554,6 +793,17 @@
           "type"
         ],
         "title": "ValidationError"
+      }
+    },
+    "securitySchemes": {
+      "OAuth2PasswordBearer": {
+        "type": "oauth2",
+        "flows": {
+          "password": {
+            "scopes": {},
+            "tokenUrl": "/login"
+          }
+        }
       }
     }
   }
